Highlight echo'd input, fix extra spaces in history

--- a/crates/web-host/src/client/moor.css
+++ b/crates/web-host/src/client/moor.css
@@ -260,3 +260,7 @@ html, body {
     font-family: 'Roboto', sans-serif;
 }
 
+.input_echo {
+    font-family: 'Roboto Mono', monospace;
+    color: #00ff00;
+}
